--- a/SqlDependency.Spike/Web.config
+++ b/SqlDependency.Spike/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SqlDependency.Spike-20170328062239.mdf;Initial Catalog=aspnet-SqlDependency.Spike-20170328062239;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ScheduleConnection" connectionString="data source=boodleSql; initial catalog=RaceSpike;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ScheduleConnection" connectionString="data source=.; initial catalog=RaceSpike;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
